.provarCaches/00D6C0000000xA6UAI/objects/sked__Resource__c.object
<CustomObject>
    <fields>
        <fullName>Backup_Address__c</fullName>
        <label>Backup Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Geolocation__c</fullName>
        <label>Backup Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>PTOC</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Vacancy</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive_From__c</fullName>
        <label>Inactive From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_List__c</fullName>
        <label>Market List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMW - Chicago, IL/Northwest IN</fullName>
                </value>
                <value>
                    <fullName>CMW - Detroit-Ann Arbor, MI/Toledo, OH</fullName>
                </value>
                <value>
                    <fullName>CMW - Flint, MI</fullName>
                </value>
                <value>
                    <fullName>CMW - Grand Rapids/Kalamazoo, MI</fullName>
                </value>
                <value>
                    <fullName>CMW - Lansing, MI</fullName>
                </value>
                <value>
                    <fullName>CMW - Milwaukee, WI</fullName>
                </value>
                <value>
                    <fullName>CMW - Partner Delivery</fullName>
                </value>
                <value>
                    <fullName>CMW - Peoria-Champaign, IL</fullName>
                </value>
                <value>
                    <fullName>MA - Cincinnati-Dayton, OH</fullName>
                </value>
                <value>
                    <fullName>MA - Coastal VA</fullName>
                </value>
                <value>
                    <fullName>MA - Evansville, IN/Henderson, KY</fullName>
                </value>
                <value>
                    <fullName>MA - Greater Baltimore, MD</fullName>
                </value>
                <value>
                    <fullName>MA - Indianapolis, IN/Central IN</fullName>
                </value>
                <value>
                    <fullName>MA - Louisville-Lexington, KY</fullName>
                </value>
                <value>
                    <fullName>MA - Northern VA/Washington, DC</fullName>
                </value>
                <value>
                    <fullName>MA - Partner Delivery</fullName>
                </value>
                <value>
                    <fullName>MA - Richmond, VA</fullName>
                </value>
                <value>
                    <fullName>NE - Albany, NY</fullName>
                </value>
                <value>
                    <fullName>NE - Buffalo, NY</fullName>
                </value>
                <value>
                    <fullName>NE - Central PA</fullName>
                </value>
                <value>
                    <fullName>NE - Cleveland-Akron, OH</fullName>
                </value>
                <value>
                    <fullName>NE - Columbus, OH</fullName>
                </value>
                <value>
                    <fullName>NE - Partner Delivery</fullName>
                </value>
                <value>
                    <fullName>NE - Rochester, NY</fullName>
                </value>
                <value>
                    <fullName>NE - Syracuse, NY</fullName>
                </value>
                <value>
                    <fullName>NE - Western PA</fullName>
                </value>
                <value>
                    <fullName>NEW - Cambridge, MA</fullName>
                </value>
                <value>
                    <fullName>NEW - Connecticut</fullName>
                </value>
                <value>
                    <fullName>NEW - Manchester, NH</fullName>
                </value>
                <value>
                    <fullName>NEW - Partner Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekly_Scheduled_Hours__c</fullName>
        <label>Weekly Scheduled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Alias__c</fullName>
        <label>Alias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Auto_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instructor</fullName>
                </value>
                <value>
                    <fullName>Nurse Instructor</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Charge Nurse</fullName>
                </value>
                <value>
                    <fullName>Proctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Country_Code__c</fullName>
        <description>The Country Code the Resource is situated (used for phone number validation / processing)</description>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sked__Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Part-time</fullName>
                </value>
                <value>
                    <fullName>Casual</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sked__Home_Address__c</fullName>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked__Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sked__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sked__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Notification_Type__c</fullName>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>sms</fullName>
                </value>
                <value>
                    <fullName>push</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sked__Primary_Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Resource_Type__c</fullName>
        <description>Is the resource a human or otherwise</description>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Person</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A copy of UserId, populated by a trigger. This is to ensure that each user will have at most one associated resource.</description>
        <label>UniqueKey</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sked__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Weekly_Hours__c</fullName>
        <defaultValue>40</defaultValue>
        <description>The default hours per week that a human resource works</description>
        <inlineHelpText>The default hours per week that a human resource works</inlineHelpText>
        <label>Weekly Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Working_Hour_Type__c</fullName>
        <label>Working Hour Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Shift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>Active_Resources</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Employment_Type__c</columns>
        <columns>sked__Primary_Region__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Market_List__c</columns>
        <columns>sked__Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sked__Category__c</field>
            <operation>equals</operation>
            <value>Instructor</value>
        </filters>
        <filters>
            <field>sked__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Resources</label>
    </listViews>
    <listViews>
        <fullName>Active_TP_Resources</fullName>
        <columns>NAME</columns>
        <columns>Supervisor__c</columns>
        <columns>Employment_Type__c</columns>
        <columns>sked__Rating__c</columns>
        <columns>sked__Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sked__Category__c</field>
            <operation>equals</operation>
            <value>Instructor</value>
        </filters>
        <filters>
            <field>sked__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employment_Type__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>Active TP Resources</label>
    </listViews>
    <listViews>
        <fullName>Subcontractors2</fullName>
        <columns>NAME</columns>
        <columns>sked__Resource_Type__c</columns>
        <columns>sked__User__c</columns>
        <columns>sked__Category__c</columns>
        <columns>sked__Primary_Region__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Employment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employment_Type__c</field>
            <operation>equals</operation>
            <value>Subcontractor</value>
        </filters>
        <label>Subcontractors</label>
    </listViews>
    <listViews>
        <fullName>sked__All</fullName>
        <columns>NAME</columns>
        <columns>sked__Resource_Type__c</columns>
        <columns>sked__Category__c</columns>
        <columns>sked__Primary_Region__c</columns>
        <columns>sked__Is_Active__c</columns>
        <columns>Supervisor__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employment_Type__c</field>
            <operation>equals</operation>
            <value>FT,PT,PTOC,Volunteer,Vacancy</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Inactive_from_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Is_Active__c  = FALSE &amp;&amp;  ISBLANK( Inactive_From__c )</errorConditionFormula>
        <errorMessage>Inactive From cannot be blank when Is Active is unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inactive_from_cannot_be_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Is_Active__c = FALSE &amp;&amp;  Inactive_From__c &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Inactive From must be less than or equal today.</errorMessage>
    </validationRules>
</CustomObject>